034_full_deployment/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: full-deployment
  labels:
    app: postgres-app
