034_full_deployment/manifests/deployment-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres 
  namespace: full-deployment
  labels:
    app: postgres-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-app
  template:
    metadata:
      labels:
        app: postgres-app
    spec:
      containers:
        - name: postgres
          image: postgres 
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432  # Exposes container port
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
            - mountPath: /docker-entrypoint-initdb.d
              name: postgres-init-data
          resources: {}
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: db-pvc
        - name: postgres-init-data
          configMap:
            name: postgres-init
