034_full_deployment/manifests/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres-app
  name: postgres
  namespace: full-deployment
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres-app
