034_full_deployment/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: school-api
  namespace: full-deployment
spec:
  ingressClassName: public
  rules:
    - host: school.kubernetes.course
      http:
        paths:
          - backend:
              service:
                name: school-project
                port:
                  number: 8000
            pathType: Prefix
            path: /
